Init projects structure

--- a/HomeBudgetMVC.Infrastructure/HomeBudgetMVC.Infrastructure.csproj
+++ b/HomeBudgetMVC.Infrastructure/HomeBudgetMVC.Infrastructure.csproj
@@ -4,4 +4,12 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Repositories\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\HomeBudgetMVC.Domain\HomeBudgetMVC.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
