--- a/HomeBudgetMVC.Application/HomeBudgetMVC.Application.csproj
+++ b/HomeBudgetMVC.Application/HomeBudgetMVC.Application.csproj
@@ -4,4 +4,13 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Interfaces\" />
+    <Folder Include="Services\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\HomeBudgetMVC.Domain\HomeBudgetMVC.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
