Add connection string and initial migration

--- a/HomeBudgetMVC.Web/appsettings.json
+++ b/HomeBudgetMVC.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-HomeBudgetMVC.Web-558E1505-363B-4896-AA63-91F44FB77C21;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS01;Database=HomeBudgetMVC;Trusted_Connection=True;"
   },
   "Logging": {
     "LogLevel": {
